changed inner.html to reference, added artist and commission pages

--- a/commissions.html
+++ b/commissions.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Portfolio - Meraki by Ekemini</title>
+	<title>Commissions - Meraki by Ekemini</title>
 	<meta charset="utf-8">
 	<meta name="author" content="Ekemini Nkanta">
-	<meta name="description" content="Collection of watercolor, acrylic, and ink pieces by NYC artist Ekemini Nkanta (@kimi.draws_)."/>
+	<meta name="description" content="??? NYC artist Ekemini Nkanta (@kimi.draws_)."/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -24,8 +24,8 @@
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="portfolio.html" class="selected">Portfolio</a></li>
-				<li><a href="commissions.html">Commission Me!</a></li>
+				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="commissions.html" class="selected">Commission Me!</a></li>
 				<li><a href="artist.html">Meet the Artist</a></li>
 				<li><a href="https://merakibyekemini.storenvy.com">Shop</a></li>
 			</ul>
@@ -47,62 +47,10 @@
 	</header><!-- end header -->
 
 	<section class="main clearfix">
-		<h3>Watercolor</h3>
-		<div class="row">
-			<div class="column">
-				<img src="img/goddess.jpg" alt="Goddess of the Sun"/>
-				<img src="img/redrawfish.jpg" alt="salmonella_fish redraw"/>
-				<img src="img/flowerbathinbali.jpg" alt="Flower Bath in Bali"/>
-			</div>
-
-			<div class="column">
-				<img src="img/menace.jpg" alt="Menace To Society"/>
-				<img src="img/dreamer.jpg" alt="Dreamer in the City that Never Sleeps"/>
-				<img src="img/cherry.jpg" alt="Cherry"/>
-				<img src="img/coexist.jpg" alt="Coexist"/>
-			</div>
-
-			<div class="column">
-				<img src="img/evangelia.jpg" alt="Evangelia"/>
-				<img src="img/redrawfeefal.jpg" alt="feefal redraw"/>
-				<img src="img/redrawdreachie.jpg" alt="dreachie redraw"/>
-				<img src="img/zodiacsona.jpg" alt="scorpio zodiacsona"/>
-			</div>
-		</div>
-
-		<h3>Acrylic</h3>
-		<div class="row">
-			<div class="column">
-				<img src="img/jupiterseye.jpg" alt="Jupiter's Eye"/>
-				<img src="img/" alt="Ice Cream"/>
-			</div>
-
-			<div class="column">
-				<img src="img/innergrowth.jpg" alt="Inner Growth"/>
-				<img src="img/" alt="Kanagawa Jeans"/>
-				<img src="img/drown.jpg" alt="Drown"/>
-			</div>
-
-			<div class="column">
-				<img src="img/headintheclouds.jpg" alt="Head in the Clouds"/>
-				<img src="img/vortex.jpg" alt="Vortex"/>
-			</div>
-		</div>
-
-		<h3>Ink/Graphite</h3>
-		<div class="row">
-			<div class="column">
-				<img src="img/" alt=""/>
-			</div>
-
-			<div class="column">
-				<img src="img/" alt=""/>
-			</div>
-
-			<div class="column">
-				<img src="img/" alt=""/>
-			</div>
-		</div>
+		<h3>Commissions</h3>
+    <h4></h4>
+    <div>
+    </div>
 	</section><!-- end main -->
 
 </body>
