--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200" rel="stylesheet">
-	  <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
-
+		<script type="text/javascript" src="js/jquery.js"></script>
+  	<script type="text/javascript" src="js/main.js"></script>
 </head>
-<body>
 
+<body>
 	<header>
 		<div class="logo">
 			<a href="index.html"><h2>Meraki by Ekemini.</h2></a>
@@ -26,8 +25,8 @@
 			<ul>
 				<li><a href="index.html" class="selected">Home</a></li>
 				<li><a href="portfolio.html">Portfolio</a></li>
-				<li><a href="#">Commission Me!</a></li>
-				<li><a href="#">Meet the Artist</a></li>
+				<li><a href="commissions.html">Commission Me!</a></li>
+				<li><a href="artist.html">Meet the Artist</a></li>
 				<li><a href="https://merakibyekemini.storenvy.com">Shop</a></li>
 			</ul>
 		</nav><!-- end navigation menu -->
@@ -116,10 +115,10 @@
 
 		<div class="work">
 			<a href="inner.html">
-				<img src="img/headintheclouds_sq.jpg" class="media" alt="Head in the CLouds"/>
+				<img src="img/evangelia.jpg" class="media" alt="Evangelia"/>
 				<div class="caption">
 					<div class="work_title">
-						<h1>Head in the Clouds</h1>
+						<h1>Evangelia</h1>
 					</div>
 				</div>
 			</a>
@@ -127,10 +126,10 @@
 
 		<div class="work">
 			<a href="inner.html">
-				<img src="img/evangelia.jpg" class="media" alt="Evangelia"/>
+				<img src="img/headintheclouds_sq.jpg" class="media" alt="Head in the CLouds"/>
 				<div class="caption">
 					<div class="work_title">
-						<h1>Evangelia</h1>
+						<h1>Head in the Clouds</h1>
 					</div>
 				</div>
 			</a>
