--- a/commissions.html
+++ b/commissions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Commissions - Meraki by Ekemini</title>
+	<title>Commission Me - Meraki by Ekemini</title>
 	<meta charset="utf-8">
 	<meta name="author" content="Ekemini Nkanta">
 	<meta name="description" content="??? NYC artist Ekemini Nkanta (@kimi.draws_)."/>
@@ -41,14 +41,14 @@
 			</ul><!-- end social -->
 
 			<div class="rights">
-				<p>Copyright © 2018 Ekemini Nkanta.</p>
+				<p>Copyright © 2018 Ekemini Nkanta</p>
 			</div><!-- end rights -->
 		</div ><!-- end footer -->
 	</header><!-- end header -->
 
 	<section class="main clearfix">
-		<h3>Commissions</h3>
-    <h4></h4>
+		<h3>Commission Me!</h3>
+    <h4>Want a portrait, denim jacket, or other painting created by yours truly? Keep reading :)</h4>
     <div>
     </div>
 	</section><!-- end main -->
