--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
 			</ul><!-- end social -->
 
 			<div class="rights">
-				<p>Copyright © 2018 Ekemini Nkanta.</p>
+				<p>Copyright © 2018 Ekemini Nkanta</p>
 			</div><!-- end rights -->
 		</div ><!-- end footer -->
 	</header><!-- end header -->
