formatted p, titles, and subtitles. started commission and MTA pages. added margins.

--- a/artist.html
+++ b/artist.html
@@ -48,7 +48,8 @@
 
 	<section class="main clearfix">
 		<h3>Meet the Artist</h3>
-    <div>
+    <div class="content">
+			<img src="img/profile-pic.jpg" class="profile" alt="profile picture"/>
     </div>
 	</section><!-- end main -->
 
