--- a/commissions.html
+++ b/commissions.html
@@ -49,7 +49,25 @@
 	<section class="main clearfix">
 		<h3>Commission Me!</h3>
     <h4>Want a portrait, denim jacket, or other painting created by yours truly? Keep reading :)</h4>
-    <div>
+    <div class="content">
+			<p class="title">RULES:</p>
+			<p>
+				<ul>
+					<li>I’m open to pretty much everything: fan art, tasteful nudity, OCs, fantasy, horror . . .</li>
+					<li>Please no furries or offensive/political content!</li>
+					<li>My default sizes are 9x12" for watercolor and 12x12" for acrylic, but I have others! Just ask ♥</li>
+					<li>I accept payment upfront via Venmo, Paypal, or my online shop (Storenvy accepts credit/debit).</li>
+					<li>I mail worldwide! Free shipping within the US ☺</li>
+					<li>I have the right to decline your commission.</li>
+					<li>Fill out the Google form below and I'll get back to you ASAP!</li>
+				</ul>
+			</p>
+
+			<a class="CTA">Take me to the form!</a>
+
+			<p>
+				<img />
+			</p>
     </div>
 	</section><!-- end main -->
 
