--- a/portfolio.html
+++ b/portfolio.html
@@ -48,59 +48,65 @@
 
 	<section class="main clearfix">
 		<h3>Watercolor</h3>
-		<div class="row">
-			<div class="column">
-				<img src="img/goddess.jpg" alt="Goddess of the Sun"/>
-				<img src="img/redrawfish.jpg" alt="salmonella_fish redraw"/>
-				<img src="img/flowerbathinbali.jpg" alt="Flower Bath in Bali"/>
-			</div>
+		<div class="container">
+			<div class="row">
+				<div class="column">
+					<img src="img/goddess.jpg" alt="Goddess of the Sun"/>
+					<img src="img/redrawfish.jpg" alt="salmonella_fish redraw"/>
+					<img src="img/flowerbathinbali.jpg" alt="Flower Bath in Bali"/>
+				</div>
 
-			<div class="column">
-				<img src="img/menace.jpg" alt="Menace To Society"/>
-				<img src="img/dreamer.jpg" alt="Dreamer in the City that Never Sleeps"/>
-				<img src="img/cherry.jpg" alt="Cherry"/>
-				<img src="img/coexist.jpg" alt="Coexist"/>
-			</div>
+				<div class="column">
+					<img src="img/menace.jpg" alt="Menace To Society"/>
+					<img src="img/dreamer.jpg" alt="Dreamer in the City that Never Sleeps"/>
+					<img src="img/cherry.jpg" alt="Cherry"/>
+					<img src="img/coexist.jpg" alt="Coexist"/>
+				</div>
 
-			<div class="column">
-				<img src="img/evangelia.jpg" alt="Evangelia"/>
-				<img src="img/redrawfeefal.jpg" alt="feefal redraw"/>
-				<img src="img/redrawdreachie.jpg" alt="dreachie redraw"/>
-				<img src="img/zodiacsona.jpg" alt="scorpio zodiacsona"/>
+				<div class="column">
+					<img src="img/evangelia.jpg" alt="Evangelia"/>
+					<img src="img/redrawfeefal.jpg" alt="feefal redraw"/>
+					<img src="img/redrawdreachie.jpg" alt="dreachie redraw"/>
+					<img src="img/zodiacsona.jpg" alt="scorpio zodiacsona"/>
+				</div>
 			</div>
 		</div>
 
 		<h3>Acrylic</h3>
-		<div class="row">
-			<div class="column">
-				<img src="img/jupiterseye.jpg" alt="Jupiter's Eye"/>
-				<img src="img/" alt="Ice Cream"/>
-			</div>
+		<div class="container">
+			<div class="row">
+				<div class="column">
+					<img src="img/jupiterseye.jpg" alt="Jupiter's Eye"/>
+					<img src="img/" alt="Ice Cream"/>
+				</div>
 
-			<div class="column">
-				<img src="img/innergrowth.jpg" alt="Inner Growth"/>
-				<img src="img/" alt="Kanagawa Jeans"/>
-				<img src="img/drown.jpg" alt="Drown"/>
-			</div>
+				<div class="column">
+					<img src="img/innergrowth.jpg" alt="Inner Growth"/>
+					<img src="img/" alt="Kanagawa Jeans"/>
+					<img src="img/drown.jpg" alt="Drown"/>
+				</div>
 
-			<div class="column">
-				<img src="img/headintheclouds.jpg" alt="Head in the Clouds"/>
-				<img src="img/vortex.jpg" alt="Vortex"/>
+				<div class="column">
+					<img src="img/headintheclouds.jpg" alt="Head in the Clouds"/>
+					<img src="img/vortex.jpg" alt="Vortex"/>
+				</div>
 			</div>
 		</div>
 
 		<h3>Ink/Graphite</h3>
-		<div class="row">
-			<div class="column">
-				<img src="img/" alt=""/>
-			</div>
+		<div class="container">
+			<div class="row">
+				<div class="column">
+					<img src="img/" alt=""/>
+				</div>
 
-			<div class="column">
-				<img src="img/" alt=""/>
-			</div>
+				<div class="column">
+					<img src="img/" alt=""/>
+				</div>
 
-			<div class="column">
-				<img src="img/" alt=""/>
+				<div class="column">
+					<img src="img/" alt=""/>
+				</div>
 			</div>
 		</div>
 	</section><!-- end main -->
