finally optimized all portfolio images, replaced vortex and reordered feature page

--- a/commissions.html
+++ b/commissions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Commission Me - Meraki by Ekemini</title>
+	<title>Commissions - Meraki by Ekemini</title>
 	<meta charset="utf-8">
 	<meta name="author" content="Ekemini Nkanta">
 	<meta name="description" content="??? NYC artist Ekemini Nkanta (@kimi.draws_)."/>
