--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
 
 		<div class="work">
 			<a href="inner.html">
-				<img src="img/vortex.jpg" class="media" alt="Vortex"/>
+				<img src="img/menace_sq.jpg" class="media" alt="Menace To Society"/>
 				<div class="caption">
 					<div class="work_title">
-						<h1>Vortex</h1>
+						<h1>Menace II Society</h1>
 					</div>
 				</div>
 			</a>
@@ -104,10 +104,10 @@
 
 		<div class="work">
 			<a href="inner.html">
-				<img src="img/menace_sq.jpg" class="media" alt="Menace To Society"/>
+				<img src="img/kanagawa.jpg" class="media" alt="Kanagawa"/>
 				<div class="caption">
 					<div class="work_title">
-						<h1>Menace II Society</h1>
+						<h1>Great Wave Off Kanagawa (Study)</h1>
 					</div>
 				</div>
 			</a>
