--- a/portfolio.html
+++ b/portfolio.html
@@ -52,8 +52,8 @@
 			<div class="row">
 				<div class="column">
 					<img src="img/goddess.jpg" alt="Goddess of the Sun"/>
-					<img src="img/redrawfish.jpg" alt="salmonella_fish redraw"/>
 					<img src="img/flowerbathinbali.jpg" alt="Flower Bath in Bali"/>
+					<img src="img/zodiacsona.jpg" alt="scorpio zodiacsona"/>
 				</div>
 
 				<div class="column">
@@ -67,7 +67,7 @@
 					<img src="img/evangelia.jpg" alt="Evangelia"/>
 					<img src="img/redrawfeefal.jpg" alt="feefal redraw"/>
 					<img src="img/redrawdreachie.jpg" alt="dreachie redraw"/>
-					<img src="img/zodiacsona.jpg" alt="scorpio zodiacsona"/>
+					<img src="img/redrawfish.jpg" alt="salmonella_fish redraw"/>
 				</div>
 			</div>
 		</div>
@@ -77,12 +77,12 @@
 			<div class="row">
 				<div class="column">
 					<img src="img/jupiterseye.jpg" alt="Jupiter's Eye"/>
-					<img src="img/" alt="Ice Cream"/>
+					<img src="img/icecream.jpg" alt="Ice Cream"/>
 				</div>
 
 				<div class="column">
 					<img src="img/innergrowth.jpg" alt="Inner Growth"/>
-					<img src="img/" alt="Kanagawa Jeans"/>
+					<img src="img/kanagawa.jpg" alt="Kanagawa Jeans"/>
 					<img src="img/drown.jpg" alt="Drown"/>
 				</div>
 
@@ -97,15 +97,18 @@
 		<div class="container">
 			<div class="row">
 				<div class="column">
-					<img src="img/" alt=""/>
+					<img src="img/inktoberday1.jpg" alt="Inktober Day 1"/>
+					<img src="img/inktoberday4.jpg" alt="Inktober Day 4"/>
 				</div>
 
 				<div class="column">
-					<img src="img/" alt=""/>
+					<img src="img/inktoberday2.jpg" alt="Inktober Day 2"/>
+					<img src="img/inktoberday5.jpg" alt="Inktober Day 5"/>
 				</div>
 
 				<div class="column">
-					<img src="img/" alt=""/>
+					<img src="img/inktoberday3.jpg" alt="Inktober Day 3"/>
+					<img src="img/inktoberday6.jpg" alt="Inktober Day 6"/>
 				</div>
 			</div>
 		</div>
