progress on artist bio. changed some formatting (ex. p to h4/h5 where appropriate)

--- a/artist.html
+++ b/artist.html
@@ -17,7 +17,7 @@
 <body>
 	<header>
 		<div class="logo">
-			<a href="index.html"><h2>Meraki by Ekemini.</h2></a>
+			<a href="index.html" title="meraki (v.) to do something with soul, creativity or love; to put part of yourself into your work."><h2>Meraki by Ekemini.</h2></a>
 		</div><!-- end logo -->
 
 		<div id="menu_icon"></div>
@@ -49,7 +49,10 @@
 	<section class="main clearfix">
 		<h3>Meet the Artist</h3>
     <div class="content">
-			<img src="img/profile-pic.jpg" class="profile" alt="profile picture"/>
+			<h4><img src="img/profile-pic.jpg" class="profile" alt="profile picture"/>Ekemini Nkanta</h4>
+			<p>Hey :) I'm a self-taught artist and <a href="https://devpost.com/3k3m1n1/" class="redirect">front-end developer</a> from New York City. I’ve been drawing since I could hold a pencil, but I didn’t start taking it seriously until this year.</p>
+			<h4>The Meaning Of Meraki</h4>
+			<p>...</p>
     </div>
 	</section><!-- end main -->
 
