--- a/commissions.html
+++ b/commissions.html
@@ -17,7 +17,7 @@
 <body>
 	<header>
 		<div class="logo">
-			<a href="index.html"><h2>Meraki by Ekemini.</h2></a>
+			<a href="index.html" title="meraki (v.) to do something with soul, creativity or love; to put part of yourself into your work."><h2>Meraki by Ekemini.</h2></a>
 		</div><!-- end logo -->
 
 		<div id="menu_icon"></div>
@@ -50,7 +50,7 @@
 		<h3>Commission Me!</h3>
     <h4>Want a portrait, denim jacket, or other painting created by yours truly? Keep reading :)</h4>
     <div class="content">
-			<p class="title">RULES:</p>
+			<h5 class="title">Rules:</h5>
 			<p>
 				<ul>
 					<li>I’m open to pretty much everything: fan art, tasteful nudity, OCs, fantasy, horror . . .</li>
