--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 <body>
 	<header>
 		<div class="logo">
-			<a href="index.html"><h2>Meraki by Ekemini.</h2></a>
+			<a href="index.html" title="meraki (v.) to do something with soul, creativity or love; to put part of yourself into your work."><h2>Meraki by Ekemini.</h2></a>
 		</div><!-- end logo -->
 
 		<div id="menu_icon"></div>
