--- a/commissions.html
+++ b/commissions.html
@@ -65,9 +65,7 @@
 
 			<a class="CTA" href="https://goo.gl/forms/bEdXwicE6jppyUiH3" target="_blank">Take me to the form!</a>
 
-			<p>
-				<img />
-			</p>
+			<p><img src="img/?" alt="watercolor option"/>...</p>
     </div>
 	</section><!-- end main -->
 
