finished meraki bio, added swimming pools to feature page, rearranged portfolio for mobile users

--- a/artist.html
+++ b/artist.html
@@ -17,7 +17,7 @@
 <body>
 	<header>
 		<div class="logo">
-			<a href="index.html" title="meraki (v.) to do something with soul, creativity or love; to put part of yourself into your work."><h2>Meraki by Ekemini.</h2></a>
+			<a href="index.html" title="meraki (n.) to do something with soul, creativity or love; to put part of yourself into your work."><h2>Meraki by Ekemini.</h2></a>
 		</div><!-- end logo -->
 
 		<div id="menu_icon"></div>
@@ -54,7 +54,7 @@
 				start taking it seriously until I launched my own business in January. Painting, writing and coding are all major parts of who I am, and I really hope one of them takes me far someday. So far,
 				I've won 3rd place in my high school's talent show for my slam poetry performance, and was recently announced as a <a href="http://artandwriting.org/media/405269" class="redirect">2018 National Gold Medalist</a> in Scholastic's Art and Writing Awards.</p>
 			<h4>The Meaning Of Meraki</h4>
-			<p>...</p>
+			<p>"Meraki" is a Greek word that doesn't translate smoothly to any noun in English. The best way to describe it is when one does something with "soul, creativity, or love," or places a part of themselves into their work.</p>
 			<!-- display social icons as block or inline block? def below img -->
     </div>
 	</section><!-- end main -->
