--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 	<header>
 		<div class="logo">
-			<a href="index.html" title="meraki (v.) to do something with soul, creativity or love; to put part of yourself into your work."><h2>Meraki by Ekemini.</h2></a>
+			<a href="index.html" title="meraki (n.) to do something with soul, creativity or love; to put part of yourself into your work."><h2>Meraki by Ekemini.</h2></a>
 		</div><!-- end logo -->
 
 		<div id="menu_icon"></div>
@@ -82,10 +82,10 @@
 
 		<div class="work">
 			<a href="inner.html">
-				<img src="img/menace_sq.jpg" class="media" alt="Menace To Society"/>
+				<img src="img/swimmingpools_sq.jpg" class="media" alt="Swimming Pools"/>
 				<div class="caption">
 					<div class="work_title">
-						<h1>Menace II Society</h1>
+						<h1>Swimming Pools</h1>
 					</div>
 				</div>
 			</a>
@@ -104,10 +104,10 @@
 
 		<div class="work">
 			<a href="inner.html">
-				<img src="img/kanagawa.jpg" class="media" alt="Kanagawa"/>
+				<img src="img/menace_sq.jpg" class="media" alt="Menace To Society"/>
 				<div class="caption">
 					<div class="work_title">
-						<h1>Great Wave Off Kanagawa (Study)</h1>
+						<h1>Menace II Society</h1>
 					</div>
 				</div>
 			</a>
