--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 <body>
 	<header>
 		<div class="logo">
-			<a href="index.html" title="meraki (v.) to do something with soul, creativity or love; to put part of yourself into your work."><h2>Meraki by Ekemini.</h2></a>
+			<a href="index.html" title="meraki (n.) to do something with soul, creativity or love; to put part of yourself into your work."><h2>Meraki by Ekemini.</h2></a>
 		</div><!-- end logo -->
 
 		<div id="menu_icon"></div>
@@ -52,21 +52,21 @@
 			<div class="row">
 				<div class="column">
 					<img src="img/goddess.jpg" alt="Goddess of the Sun"/>
-					<img src="img/flowerbathinbali.jpg" alt="Flower Bath in Bali"/>
-					<img src="img/zodiacsona.jpg" alt="scorpio zodiacsona"/>
-				</div>
-
-				<div class="column">
-					<img src="img/menace.jpg" alt="Menace To Society"/>
-					<img src="img/dreamer.jpg" alt="Dreamer in the City that Never Sleeps"/>
-					<img src="img/cherry.jpg" alt="Cherry"/>
+					<img src="img/redrawfeefal.jpg" alt="feefal redraw"/>
 					<img src="img/coexist.jpg" alt="Coexist"/>
 				</div>
 
 				<div class="column">
+					<img src="img/menace.jpg" alt="Menace To Society"/>
 					<img src="img/evangelia.jpg" alt="Evangelia"/>
-					<img src="img/redrawfeefal.jpg" alt="feefal redraw"/>
+					<img src="img/zodiacsona.jpg" alt="scorpio zodiacsona"/>
+					<img src="img/cherry.jpg" alt="Cherry"/>
 					<img src="img/redrawdreachie.jpg" alt="dreachie redraw"/>
+				</div>
+
+				<div class="column">
+					<img src="img/dreamer.jpg" alt="Dreamer in the City that Never Sleeps"/>
+					<img src="img/flowerbathinbali.jpg" alt="Flower Bath in Bali"/>
 					<img src="img/redrawfish.jpg" alt="salmonella_fish redraw"/>
 				</div>
 			</div>
