--- a/artist.html
+++ b/artist.html
@@ -52,9 +52,9 @@
 			<h4><img src="img/profile-pic.jpg" class="profile" alt="profile picture"/>Ekemini Nkanta</h4>
 			<p>Hi! I'm a self-taught artist and <a href="https://devpost.com/3k3m1n1/" class="redirect">front-end developer</a> thriving in New York City :) I’ve been drawing since I could hold a pencil, but didn’t
 				start taking it seriously until I launched my own business in January. Painting, writing and coding are all major parts of who I am, and I really hope one of them takes me far someday. So far,
-				I've won 3rd place in my high school's talent show for my slam poetry performance, and was recently announced as a <a href="http://artandwriting.org/media/405269" class="redirect">2018 National Gold Medalist</a> in Scholastic's Art and Writing Awards.</p>
+				I've won 3rd place in my high school's talent show for performing slam poetry, and was recently announced a <a href="http://artandwriting.org/media/405269" class="redirect">2018 National Gold Medalist</a> in the Scholastic Art and Writing Awards.</p>
 			<h4>The Meaning Of Meraki</h4>
-			<p>"Meraki" is a Greek word that doesn't translate smoothly to any noun in English. The best way to describe it is when one does something with "soul, creativity, or love," or places a part of themselves into their work.</p>
+			<p>"Meraki" is a Greek word that doesn't translate smoothly to any noun in English. The best way to describe it is when one does something with soul, creativity, or love; or places a part of themselves into their work.</p>
 			<!-- display social icons as block or inline block? def below img -->
     </div>
 	</section><!-- end main -->
