--- a/commissions.html
+++ b/commissions.html
@@ -48,7 +48,7 @@
 
 	<section class="main clearfix">
 		<h3>Commission Me!</h3>
-    <h4>Want a portrait, denim jacket, or other painting created by yours truly? Keep reading :)</h4>
+    <h4>Want a portrait, denim jacket, or other painting made by yours truly? Keep reading :)</h4>
     <div class="content">
 			<h5 class="title">Rules:</h5>
 			<p>
@@ -56,7 +56,7 @@
 					<li>I’m open to pretty much everything: fan art, tasteful nudity, OCs, fantasy, horror . . .</li>
 					<li>Please no furries or offensive/political content!</li>
 					<li>My default sizes are 9x12" for watercolor and 12x12" for acrylic, but I have others! Just ask ♥</li>
-					<li>I accept payment upfront via Venmo, Paypal, or my online shop (Storenvy accepts credit/debit).</li>
+					<li>I accept payment upfront via Venmo, Paypal, or my online shop. (Storenvy accepts credit/debit.)</li>
 					<li>I mail worldwide! Free shipping within the US ☺</li>
 					<li>I have the right to decline your commission.</li>
 					<li>Fill out the Google form below and I'll get back to you ASAP!</li>
@@ -65,7 +65,15 @@
 
 			<a class="CTA" href="https://goo.gl/forms/bEdXwicE6jppyUiH3" target="_blank">Take me to the form!</a>
 
-			<p><img src="img/?" alt="watercolor option"/>...</p>
+			<h5 class="title">Options:</h5>
+
+			<div class="commission">
+				<p><img src="img/innergrowth_sq.jpg" alt="watercolor option" class="alternate"/>...</p>
+			</div>
+			<div class="commission">
+				<p><img src="img/innergrowth_sq.jpg" alt="watercolor option" class="alternate"/>...</p>
+			</div>
+			
     </div>
 	</section><!-- end main -->
 
