finished artist page, added favicon (i think), image color correction, menu icon is back

--- a/artist.html
+++ b/artist.html
@@ -4,12 +4,14 @@
 	<title>Meet the Artist - Meraki by Ekemini</title>
 	<meta charset="utf-8">
 	<meta name="author" content="Ekemini Nkanta">
-	<meta name="description" content="Read up on NYC artist Ekemini Nkanta's (@kimi.draws_) story, talents, and likes/dislikes."/>
+	<meta name="description" content="Read up on NYC artist Ekemini Nkanta's (@kimi.draws_) story, talents, and achievements here."/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200" rel="stylesheet">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
   	<script type="text/javascript" src="js/jquery.js"></script>
   	<script type="text/javascript" src="js/main.js"></script>
 </head>
@@ -50,12 +52,25 @@
 		<h3>Meet the Artist</h3>
     <div class="content">
 			<h4><img src="img/profile-pic.jpg" class="profile" alt="profile picture"/>Ekemini Nkanta</h4>
-			<p>Hi! I'm a self-taught artist and <a href="https://devpost.com/3k3m1n1/" class="redirect">front-end developer</a> thriving in New York City :) I’ve been drawing since I could hold a pencil, but didn’t
-				start taking it seriously until I launched my own business in January. Painting, writing and coding are all major parts of who I am, and I really hope one of them takes me far someday. So far,
-				I've won 3rd place in my high school's talent show for performing slam poetry, and was recently announced a <a href="http://artandwriting.org/media/405269" class="redirect">2018 National Gold Medalist</a> in the Scholastic Art and Writing Awards.</p>
+			<p>Hi! I'm a self-taught artist and <a href="https://devpost.com/3k3m1n1/">front-end developer</a> thriving in New York City :) I’ve been drawing since I could hold a pencil, but didn’t
+				start taking it seriously until I launched my own business in January. Painting, writing and coding are all major parts of who I am, and I hope to make one of them my career. So far,
+				I've been announced a <a href="http://artandwriting.org/media/405269">2018 National Gold Medalist</a> in the Scholastic Art and Writing Awards, won 3rd place in my HS talent show for
+				performing slam poetry, and helped build the <a href="https://devpost.com/software/prep">Best Hack for Food/Water/Shelter</a> at ByteHacks 2018 — the largest all-women NYC hackathon for social impact.</p>
 			<h4>The Meaning Of Meraki</h4>
-			<p>"Meraki" is a Greek word that doesn't translate smoothly to any noun in English. The best way to describe it is when one does something with soul, creativity, or love; or places a part of themselves into their work.</p>
-			<!-- display social icons as block or inline block? def below img -->
+			<p>"Meraki" is a Greek word that doesn't translate perfectly to any noun in English. The best way to describe it is when one does something with soul, creativity, or love; or embeds a part of themselves into their work.</p>
+
+			<div class="container">
+			<ul class="social">
+				<li><a href="https://instagram.com/kimi.draws_/"><span class="fa-stack fa-2x"><i class="fa fa-circle fa-stack-2x"></i><i class="fab fa-instagram fa-stack-1x"></i></span></a></li>
+				<li><a href="https://twitter.com/3k3m1n1"><span class="fa-stack fa-2x"><i class="fa fa-circle fa-stack-2x"></i><i class="fab fa-twitter fa-stack-1x"></i></span></a></li>
+				<li><a href="https://ko-fi.com/R5R8G4U8"><span class="fa-stack fa-2x"><i class="fa fa-circle fa-stack-2x"></i><i class="fas fa-coffee fa-stack-1x"></i></span></a></li>
+				<li><a href="https://www.pinterest.com/3k3m1n1/"><span class="fa-stack fa-2x"><i class="fa fa-circle fa-stack-2x"></i><i class="fab fa-pinterest fa-stack-1x"></i></span></a></li>
+				<li><a href="mailto:merakibyekemini@gmail.com"><span class="fa-stack fa-2x"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-envelope fa-stack-1x"></i></span></a></li>
+			</ul>
+			</div>
+
+
+
     </div>
 	</section><!-- end main -->
 
