--- a/commissions.html
+++ b/commissions.html
@@ -4,12 +4,14 @@
 	<title>Commissions - Meraki by Ekemini</title>
 	<meta charset="utf-8">
 	<meta name="author" content="Ekemini Nkanta">
-	<meta name="description" content="??? NYC artist Ekemini Nkanta (@kimi.draws_)."/>
+	<meta name="description" content="Request a portrait, denim jacket, or other custom painting from NYC artist Ekemini Nkanta (@kimi.draws_) here."/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200" rel="stylesheet">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
   	<script type="text/javascript" src="js/jquery.js"></script>
   	<script type="text/javascript" src="js/main.js"></script>
 </head>
@@ -50,14 +52,14 @@
 		<h3>Commission Me!</h3>
     <h4>Want a portrait, denim jacket, or other painting made by yours truly? Keep reading :)</h4>
     <div class="content">
-			<h5 class="title">Rules:</h5>
+			<h5 class="title">Rules</h5>
 			<p>
 				<ul>
-					<li>I’m open to pretty much everything: fan art, tasteful nudity, OCs, fantasy, horror . . .</li>
-					<li>Please no furries or offensive/political content!</li>
-					<li>My default sizes are 9x12" for watercolor and 12x12" for acrylic, but I have others! Just ask ♥</li>
-					<li>I accept payment upfront via Venmo, Paypal, or my online shop. (Storenvy accepts credit/debit.)</li>
-					<li>I mail worldwide! Free shipping within the US ☺</li>
+					<li>I’m open to pretty much everything: fan art, OCs, fantasy. . .</li>
+					<li>Please no furries or offensive/political content.</li>
+					<li>Default sizes are 9x12" for watercolor and 12x12" for acrylic, but I have others! Just ask ♥</li>
+					<li>I accept payment upfront via Venmo, Paypal, or my online shop (credit/debit).</li>
+					<li>I mail worldwide! Free shipping within the US~</li>
 					<li>I have the right to decline your commission.</li>
 					<li>Fill out the Google form below and I'll get back to you ASAP!</li>
 				</ul>
@@ -65,15 +67,8 @@
 
 			<a class="CTA" href="https://goo.gl/forms/bEdXwicE6jppyUiH3" target="_blank">Take me to the form!</a>
 
-			<h5 class="title">Options:</h5>
-
-			<div class="commission">
-				<p><img src="img/innergrowth_sq.jpg" alt="watercolor option" class="alternate"/>...</p>
-			</div>
-			<div class="commission">
-				<p><img src="img/innergrowth_sq.jpg" alt="watercolor option" class="alternate"/>...</p>
-			</div>
 			
+
     </div>
 	</section><!-- end main -->
 
