--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 	<title>Meraki by Ekemini | Watercolor and Acrylic Artist</title>
 	<meta charset="utf-8">
 	<meta name="author" content="Ekemini Nkanta">
-	<meta name="description" content="NYC artist Ekemini Nkanta (@kimi.draws_) creates watercolor and acrylic paintings & tries to survive college. Explore her portfolio, shop, bio and social media here."/>
+	<meta name="description" content="NYC artist Ekemini Nkanta (@kimi.draws_) creates watercolor and acrylic paintings & tries to survive college. Explore her portfolio, shop, story, and social media here."/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200" rel="stylesheet">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 		<script type="text/javascript" src="js/jquery.js"></script>
   	<script type="text/javascript" src="js/main.js"></script>
 </head>
