small edits to commissions rules

--- a/commissions.html
+++ b/commissions.html
@@ -56,7 +56,7 @@
 			<p>
 				<ul>
 					<li>I’m open to pretty much everything: fan art, OCs, fantasy. . .</li>
-					<li>Please no furries or offensive/political content.</li>
+					<li>Please no animals or offensive/political content.</li>
 					<li>Default sizes are 9x12" for watercolor and 12x12" for acrylic, but I have others! Just ask ♥</li>
 					<li>I accept payment upfront via Venmo, Paypal, or my online shop (credit/debit).</li>
 					<li>I mail worldwide! Free shipping within the US~</li>
@@ -67,7 +67,7 @@
 
 			<a class="CTA" href="https://goo.gl/forms/bEdXwicE6jppyUiH3" target="_blank">Take me to the form!</a>
 
-			
+			<!-- show options here -->
 
     </div>
 	</section><!-- end main -->
