quick photo edits, started adding options

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200" rel="stylesheet">
-	
+
 	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -20,7 +20,7 @@
 	<meta name="application-name" content="Meraki by Ekemini">
 	<meta name="msapplication-TileColor" content="#005273">
 	<meta name="theme-color" content="#005273">
-	
+
   	<script type="text/javascript" src="js/jquery.js"></script>
   	<script type="text/javascript" src="js/main.js"></script>
 </head>
@@ -99,7 +99,7 @@
 
 				<div class="column">
 					<img src="img/headintheclouds.jpg" alt="Head in the Clouds"/>
-					<img src="img/vortex.jpg" alt="Vortex"/>
+					<img src="img/swimmingpools_sq.jpg" alt="Vortex"/>
 				</div>
 			</div>
 		</div>
