--- a/commissions.html
+++ b/commissions.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200" rel="stylesheet">
-	
+
 	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -20,7 +20,7 @@
 	<meta name="application-name" content="Meraki by Ekemini">
 	<meta name="msapplication-TileColor" content="#005273">
 	<meta name="theme-color" content="#005273">
-	
+
   	<script type="text/javascript" src="js/jquery.js"></script>
   	<script type="text/javascript" src="js/main.js"></script>
 </head>
@@ -76,7 +76,87 @@
 
 			<a class="CTA" href="https://goo.gl/forms/bEdXwicE6jppyUiH3" target="_blank">Take me to the form!</a>
 
+			<h5 class="title">Options</h5>
+
 			<!-- show options here -->
+			<div class="options-list">
+				<div class="options-item">
+					<div class="options-img">
+						<img class="options-img" src="img/customwatercolor.jpg" />
+					</div>
+					<div class="options-info">
+							<p class="options-info">
+								Watercolor
+							</p>
+					</div>
+				</div>
+
+				<div class="options-item">
+					<div class="options-img">
+						<img class="options-img" src="img/jupiterseye.jpg" />
+					</div>
+					<div class="options-info">
+							<p class="options-info">
+								Fluid Acrylic
+							</p>
+					</div>
+				</div>
+
+				<div class="options-item">
+					<div class="options-img">
+						<img class="options-img" src="img/jupiterseye.jpg" />
+					</div>
+					<div class="options-info">
+							<p class="options-info">
+								Canvas Art
+							</p>
+					</div>
+				</div>
+
+				<div class="options-item">
+					<div class="options-img">
+						<img class="options-img" src="img/jupiterseye.jpg" />
+					</div>
+					<div class="options-info">
+							<p class="options-info">
+								Denim Jacket
+							</p>
+					</div>
+				</div>
+
+				<div class="options-item">
+					<div class="options-img">
+						<img class="options-img" src="img/jupiterseye.jpg" />
+					</div>
+					<div class="options-info">
+							<p class="options-info">
+								Pocket Shirt
+							</p>
+					</div>
+				</div>
+
+				<div class="options-item">
+					<div class="options-img">
+						<img class="options-img" src="img/jupiterseye.jpg" />
+					</div>
+					<div class="options-info">
+							<p class="options-info">
+								Graduation Cap
+							</p>
+					</div>
+				</div>
+
+			</div>
+
+
+
+
+			<div class="commission">
+				<p><img src="img/innergrowth_sq.jpg" alt="watercolor option" class="alternate"/>...</p>
+			</div>
+			<div class="commission">
+				<p><img src="img/innergrowth_sq.jpg" alt="watercolor option" class="alternate"/>...</p>
+			</div>
 
     </div>
 	</section><!-- end main -->
