made progress on commissions page, but WHERE IS MY NAV BAR

--- a/commissions.html
+++ b/commissions.html
@@ -56,6 +56,7 @@
 			</div><!-- end rights -->
 		</div ><!-- end footer -->
 	</header><!-- end header -->
+	
 
 	<section class="main clearfix">
 		<h3>Commission Me!</h3>
@@ -73,20 +74,46 @@
 					<li>Fill out the Google form below and I'll get back to you ASAP!</li>
 				</ul>
 			</p>
+			<a class="CTA" href="https://goo.gl/forms/bEdXwicE6jppyUiH3">Take me to the form!</a>
+		</div>
+	</section><!-- end rules -->
 
-			<a class="CTA" href="https://goo.gl/forms/bEdXwicE6jppyUiH3" target="_blank">Take me to the form!</a>
+
+	<section class="main clearfix contrast">
+		<div class="content">
 
 			<h5 class="title">Options</h5>
-
-			<!-- show options here -->
 			<div class="options-list">
+
 				<div class="options-item">
 					<div class="options-img">
-						<img class="options-img" src="img/customwatercolor.jpg" />
+						<img class="options-img" src="img/evangelia.jpg" />
 					</div>
 					<div class="options-info">
 							<p class="options-info">
 								Watercolor
+							</p>
+					</div>
+				</div>
+
+				<div class="options-item">
+					<div class="options-img">
+						<img class="options-img" src="img/vangogh.jpg" />
+					</div>
+					<div class="options-info">
+							<p class="options-info">
+								Pocket Shirt
+							</p>
+					</div>
+				</div>
+
+				<div class="options-item">
+					<div class="options-img">
+						<img class="options-img" src="img/denimjacket.jpg" />
+					</div>
+					<div class="options-info">
+							<p class="options-info">
+								Denim Jacket
 							</p>
 					</div>
 				</div>
@@ -104,7 +131,7 @@
 
 				<div class="options-item">
 					<div class="options-img">
-						<img class="options-img" src="img/jupiterseye.jpg" />
+						<img class="options-img" src="img/innergrowth_sq.jpg" />
 					</div>
 					<div class="options-info">
 							<p class="options-info">
@@ -115,29 +142,7 @@
 
 				<div class="options-item">
 					<div class="options-img">
-						<img class="options-img" src="img/jupiterseye.jpg" />
-					</div>
-					<div class="options-info">
-							<p class="options-info">
-								Denim Jacket
-							</p>
-					</div>
-				</div>
-
-				<div class="options-item">
-					<div class="options-img">
-						<img class="options-img" src="img/jupiterseye.jpg" />
-					</div>
-					<div class="options-info">
-							<p class="options-info">
-								Pocket Shirt
-							</p>
-					</div>
-				</div>
-
-				<div class="options-item">
-					<div class="options-img">
-						<img class="options-img" src="img/jupiterseye.jpg" />
+						<img class="options-img" src="img/gradcap.jpg" />
 					</div>
 					<div class="options-info">
 							<p class="options-info">
@@ -145,21 +150,9 @@
 							</p>
 					</div>
 				</div>
-
 			</div>
 
-
-
-
-			<div class="commission">
-				<p><img src="img/innergrowth_sq.jpg" alt="watercolor option" class="alternate"/>...</p>
-			</div>
-			<div class="commission">
-				<p><img src="img/innergrowth_sq.jpg" alt="watercolor option" class="alternate"/>...</p>
-			</div>
-
-    </div>
-	</section><!-- end main -->
-
+		</div>
+</section><!-- end contrast -->
 </body>
 </html>
