gave up on the alternating images. done.

--- a/commissions.html
+++ b/commissions.html
@@ -56,7 +56,7 @@
 			</div><!-- end rights -->
 		</div ><!-- end footer -->
 	</header><!-- end header -->
-	
+
 
 	<section class="main clearfix">
 		<h3>Commission Me!</h3>
@@ -83,73 +83,43 @@
 		<div class="content">
 
 			<h5 class="title">Options</h5>
-			<div class="options-list">
+			<div class="option">
+				<h5><img src="img/evangelia.jpg" alt="watercolor option" />Watercolor</h5>
+				<p>Icon: <b>$20</b>
+					<br>Half body: <b>$28</b>
+					<br>Full body: <b>$36</b>
+					<br>Concept art starts at <b>$50</b>.
+				</p>
+			</div>
 
-				<div class="options-item">
-					<div class="options-img">
-						<img class="options-img" src="img/evangelia.jpg" />
-					</div>
-					<div class="options-info">
-							<p class="options-info">
-								Watercolor
-							</p>
-					</div>
-				</div>
+			<div class="option">
+				<h5><img src="img/jupiterseye.jpg" alt="fluid acrylic option" />Fluid Acrylic</h5>
+				<p><b>$24</b> — Choose any color palette!
+				</p>
+			</div>
 
-				<div class="options-item">
-					<div class="options-img">
-						<img class="options-img" src="img/vangogh.jpg" />
-					</div>
-					<div class="options-info">
-							<p class="options-info">
-								Pocket Shirt
-							</p>
-					</div>
-				</div>
+			<div class="option">
+				<h5><img src="img/innergrowth_sq.jpg" alt="canvas art option" />Canvas Art</h5>
+				<p><b>$40</b>+ — Price depends on complexity.</p>
+			</div>
 
-				<div class="options-item">
-					<div class="options-img">
-						<img class="options-img" src="img/denimjacket.jpg" />
-					</div>
-					<div class="options-info">
-							<p class="options-info">
-								Denim Jacket
-							</p>
-					</div>
-				</div>
+			<div class="option">
+				<h5><img src="img/denimjacket.jpg" alt="denim jacket option" />Denim Jacket</h5>
+				<p><b>$30</b> + cost of jacket.
+					<br>(Feel free to mail me your own!)
+				</p>
+			</div>
 
-				<div class="options-item">
-					<div class="options-img">
-						<img class="options-img" src="img/jupiterseye.jpg" />
-					</div>
-					<div class="options-info">
-							<p class="options-info">
-								Fluid Acrylic
-							</p>
-					</div>
-				</div>
+			<div class="option">
+				<h5><img src="img/vangogh.jpg" alt="pocket shirt option" />Pocket Shirt</h5>
+				<p><b>$15</b> + cost of shirt.
+					<br>($6 from H&M)
+				</p>
+			</div>
 
-				<div class="options-item">
-					<div class="options-img">
-						<img class="options-img" src="img/innergrowth_sq.jpg" />
-					</div>
-					<div class="options-info">
-							<p class="options-info">
-								Canvas Art
-							</p>
-					</div>
-				</div>
-
-				<div class="options-item">
-					<div class="options-img">
-						<img class="options-img" src="img/gradcap.jpg" />
-					</div>
-					<div class="options-info">
-							<p class="options-info">
-								Graduation Cap
-							</p>
-					</div>
-				</div>
+			<div class="option">
+				<h5><img src="img/gradcap.jpg" alt="grad cap option" />Graduation Cap</h5>
+				<p><b>$23</b> — All craft materials are covered!	</p>
 			</div>
 
 		</div>
