changes to commissions, updated some images

--- a/commissions.html
+++ b/commissions.html
@@ -113,7 +113,7 @@
 			<div class="option">
 				<h5><img src="img/vangogh.jpg" alt="pocket shirt option" />Pocket Shirt</h5>
 				<p><b>$15</b> + cost of shirt.
-					<br>($6 from H&M)
+					<br>($6 from H&M!)
 				</p>
 			</div>
 
